--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script> --> -->
 
+    <script src="api.js"></script>
+
     <!-- Navigation bar at top of Page -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark navCenter">
-        <span class="navbar-brand mb-1 h1">Weather Dashboard</span>
+        <span class="navbar-brand mb-1 h1 weatherdash">Weather Dashboard</span>
     </nav>
     <br>
     <div class="row">
@@ -62,16 +64,22 @@
                 <div class="col">
                     <div class="rightCol">
                         <div class="container-fluid">
-                            <div class="row">
+                            <div class="row container-fluid">
                                 <div class="card" style="width: 18rem;">
-                                    <div class="card-body">
+                                    <div class="card-body temp">
                                         <h2 id="MainCity" class="card-title">Card title</h2>
                                         <h4 id="Temperature" class="card-subtitle mb-2 text-muted">Temperature: </h4>
+                                        <span>
+                                            <div id="temp"></div>
+                                        </span>
                                         <h4 id="Humidity" class="card-subtitle mb-2 text-muted">Humidity: </h4>
                                         <h4 id="WindSpeed" class="card-subtitle mb-2 text-muted">Wind Speed: </h4>
                                         <h4 id="UVIndex" class="card-subtitle mb-2 text-muted">UV Index:</h4>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row container-fluid">
+                                <h4>5-Day Forecast</h4>
                             </div>
                             <div class="row container-fluid">
                                 <div id="Day1" class="card col column1">
@@ -111,7 +119,7 @@
                 </div>
             </div>
 </body>
-<script src="script.js"></script>
-<script src="api.js"></script>
+<!-- <script src="script.js"></script> -->
+
 
 </html>
