--- a/index.html
+++ b/index.html
@@ -5,34 +5,40 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
-
     <title>Taneisha's Weather Dashboard!</title>
 </head>
 
 <body>
-    Optional JavaScript
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script> --> -->
+        crossorigin="anonymous"></script> -->
 
-    <script src="api.js"></script>
+
 
     <!-- Navigation bar at top of Page -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navCenter">
-        <span class="navbar-brand mb-1 h1 weatherdash">Weather Dashboard</span>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <span class="navbar-brand mb-1 h1 ">Weather Dashboard</span>
     </nav>
     <br>
     <div class="row">
@@ -43,10 +49,10 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="label">Search for a City:</label>
-                            <input type="text" class="form-control" id="inputEmail4">
+                            <input type="text" class="form-control" id="citySearched">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Search</button>
+                    <button type="submit" class="btn btn-primary" id="searchButton">Search</button>
                 </form>
 
                 <!-- List of Searched Cities|Left side of page -->
@@ -67,14 +73,23 @@
                             <div class="row container-fluid">
                                 <div class="card" style="width: 18rem;">
                                     <div class="card-body temp">
-                                        <h2 id="MainCity" class="card-title">Card title</h2>
+                                        <h2 id="MainCity" class="card-title"></h2>
                                         <h4 id="Temperature" class="card-subtitle mb-2 text-muted">Temperature: </h4>
                                         <span>
                                             <div id="temp"></div>
                                         </span>
                                         <h4 id="Humidity" class="card-subtitle mb-2 text-muted">Humidity: </h4>
+                                        <span>
+                                            <div id="humid"></div>
+                                        </span>
                                         <h4 id="WindSpeed" class="card-subtitle mb-2 text-muted">Wind Speed: </h4>
+                                        <span>
+                                            <div id="windy"></div>
+                                        </span>
                                         <h4 id="UVIndex" class="card-subtitle mb-2 text-muted">UV Index:</h4>
+                                        <span>
+                                            <div id="uvi"></div>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -118,8 +133,7 @@
 
                 </div>
             </div>
+            <script src="api.js"></script>
 </body>
-<!-- <script src="script.js"></script> -->
-
 
 </html>
