--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="label">Search for a City:</label>
-                            <input type="text" class="form-control" id="citySearched">
+                            <input type="text" class="form-control" id="citySearched"> text
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary" id="searchButton">Search</button>
