--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     <div id="day1Date"> </div>
                                     <div id="day1Icon"> </div>
                                     <div>Temp:</div><span>
-                                        <div id="day1Temp"></div>
+                                        <div id="day1temp"></div>
                                     </span>
                                     <div>Humidity:</div><span>
                                         <div id="day1Humidity"></div>
@@ -107,7 +107,7 @@
                                     <div id="day2Date"> </div>
                                     <div id="day2Icon"> </div>
                                     <div>Temp:</div><span>
-                                        <div id="day2Temp"></div>
+                                        <div id="day2temp"></div>
                                     </span>
                                     <div>Humidity:</div><span>
                                         <div id="day2Humidity"></div>
@@ -117,7 +117,7 @@
                                     <div id="day3Date"> </div>
                                     <div id="day3Icon"> </div>
                                     <div>Temp:</div><span>
-                                        <div id="day3Temp"></div>
+                                        <div id="day3temp"></div>
                                     </span>
                                     <div>Humidity:</div><span>
                                         <div id="day3Humidity"></div>
@@ -127,7 +127,7 @@
                                     <div id="day4Date"> </div>
                                     <div id="day4Icon"> </div>
                                     <div>Temp:</div><span>
-                                        <div id="day4Temp"></div>
+                                        <div id="day4temp"></div>
                                     </span>
                                     <div>Humidity:</div><span>
                                         <div id="day4Humidity"></div>
@@ -137,10 +137,10 @@
                                     <div id="day5Date"> </div>
                                     <div id="day5Icon"> </div>
                                     <div>Temp:</div><span>
-                                        <div id="day5Temp"></div>
+                                        <div id="day5temp"></div>
                                     </span>
                                     <div>Humidity:</div><span>
-                                        <div id="day4Humidity"></div>
+                                        <div id="day5Humidity"></div>
                                     </span>
                                 </div>
                             </div>
