--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                                 </div>
                                 <div id="Day2" class="col-sm card">
                                     <div id="day2Date"> </div>
+                                    <div id="icon"></div>
                                     <div id="day2Icon"> </div>
                                     <div>Temp:</div><span>
                                         <div id="day2temp"></div>
